deploy/kustomize/overlays/dev/node-selector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unused
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: app-node
