deploy/kustomize/overlays/dev/pod-spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unused
spec:
  template:
    spec:
      imagePullSecrets:
        - name: app-217-ghcr
      nodeSelector:
        kubernetes.io/hostname: app-node
