deploy/kustomize/overlays/dev/pull-always-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-217-backend
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
