deploy/kustomize/overlays/dev/pull-always-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-217-frontend
spec:
  template:
    spec:
